fix share button's stroke width in dark mode.

--- a/src/theme/Navbar/Content/styles.module.scss
+++ b/src/theme/Navbar/Content/styles.module.scss
@@ -102,7 +102,6 @@
   svg,
   svg * {
     fill: currentColor;
-    stroke: currentColor;
   }
 }
 
